[tool.poetry]
name = "tensorflow-101"
version = "0.1.0"
description = ""
authors = ["Sean Zheng <blackhorseya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
